# syslua

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  init.lua
.beads/: issues.jsonl
.github/: FUNDING.yml
.github/workflows/: ci.yml  (+2 more)
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: apply.rs  init.rs  mod.rs  plan.rs  update.rs
crates/cli/tests/: cli_smoke.rs  mod.rs
crates/cli/tests/fixtures/: bind_check.lua  bind_create.lua  bind_update.lua  build_only.lua  build_with_exec.lua  git_input.lua  minimal.lua  multi_build.lua  pkg_jq.lua  rollback_bind_failure.lua  rollback_build_failure.lua  script_bash.lua  script_bind.lua  script_cmd.lua  script_custom_name.lua  script_invalid_format.lua  script_method.lua  script_multiple.lua  script_powershell.lua  script_shell.lua
crates/cli/tests/integration/: apply_tests.rs  common.rs  destroy_tests.rs  inputs_tests.rs  mod.rs  pkgs_tests.rs  plan_tests.rs  rollback_tests.rs  script_tests.rs  update_tests.rs  windows_tests.rs
docs/: ARCHITECTURE.md
lib/: init.lua
modules/: init.lua
pkgs/: init.lua
todos/: 001-deferred-p3-input-validation-docs.md  002-complete-p1-boolean-output-serialization.md  003-complete-p1-windows-scheduled-task-race.md  004-complete-p2-sequential-group-validation-performance.md  005-deferred-p2-expect-violations-in-paths-rs.md  006-deferred-p2-plaintext-password-handling.md  007-deferred-p2-two-phase-destroy-no-rollback.md  008-complete-p3-diagnostic-disable-type-bypasses.md  009-deferred-p3-missing-unit-tests.md  (+1 more)
(+163 files in other folders)
