[workspace]
resolver = "2"
members = ["crates/cli", "crates/lib"]

[workspace.dependencies]
anyhow = "1.0"
dunce = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.3"
temp-env = "0.3"
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1.49", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
  "io-util",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"
owo-colors = { version = "4.2", features = ["supports-colors"] }
humantime = "2.3"
