[package]
name = "syslua-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
syslua-lib = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
